trunk/src/edu/udel/cis/vsl/abc/preproc/common/PreprocessorExpressionParser.java
// $ANTLR 3.4 PreprocessorExpressionParser.g 2014-03-17 17:27:45

package edu.udel.cis.vsl.abc.preproc.common;


import org.antlr.runtime.*;
import java.util.Stack;
import java.util.List;
import java.util.ArrayList;

import org.antlr.runtime.tree.*;


@SuppressWarnings({"all", "warnings", "unchecked"})
public class PreprocessorExpressionParser extends Parser {
    public static final String[] tokenNames = new String[] {
        "<invalid>", "<EOR>", "<DOWN>", "<UP>", "ABSTRACT", "ALIGNAS", "ALIGNOF", "AMPERSAND", "AND", "ARROW", "ASSIGN", "ASSUME", "AT", "ATOMIC", "AUTO", "BIG_O", "BITANDEQ", "BITOR", "BITOREQ", "BITXOR", "BITXOREQ", "BOOL", "BREAK", "BinaryExponentPart", "CASE", "CChar", "CHAR", "CHARACTER_CONSTANT", "CHOOSE", "CIVLATOM", "CIVLATOMIC", "COLLECTIVE", "COLON", "COMMA", "COMMENT", "COMPLEX", "CONST", "CONTIN", "CONTINUE", "DEFAULT", "DEFINED", "DERIV", "DIV", "DIVEQ", "DO", "DOT", "DOTDOT", "DOUBLE", "DecimalConstant", "DecimalFloatingConstant", "Digit", "ELLIPSIS", "ELSE", "ENSURES", "ENUM", "EQUALS", "EXISTS", "EXTERN", "EscapeSequence", "ExponentPart", "FALSE", "FLOAT", "FLOATING_CONSTANT", "FOR", "FORALL", "FloatingSuffix", "FractionalConstant", "GENERIC", "GOTO", "GT", "GTE", "HASH", "HASHHASH", "HEADER_NAME", "HERE", "HexEscape", "HexFractionalConstant", "HexPrefix", "HexQuad", "HexadecimalConstant", "HexadecimalDigit", "HexadecimalFloatingConstant", "IDENTIFIER", "IF", "IMAGINARY", "IMPLIES", "INLINE", "INPUT", "INT", "INTEGER_CONSTANT", "INVARIANT", "IdentifierNonDigit", "IntegerSuffix", "LCURLY", "LONG", "LPAREN", "LSLIST", "LSQUARE", "LT", "LTE", "LongLongSuffix", "LongSuffix", "MINUSMINUS", "MOD", "MODEQ", "NEQ", "NEWLINE", "NORETURN", "NOT", "NewLine", "NonDigit", "NonZeroDigit", "NotLineStart", "OR", "OTHER", "OUTPUT", "OctalConstant", "OctalDigit", "OctalEscape", "PDEFINE", "PELIF", "PELSE", "PENDIF", "PERROR", "PIF", "PIFDEF", "PIFNDEF", "PINCLUDE", "PLINE", "PLUS", "PLUSEQ", "PLUSPLUS", "PP_NUMBER", "PRAGMA", "PUNDEF", "QMARK", "RCURLY", "REAL", "REGISTER", "REQUIRES", "RESTRICT", "RESULT", "RETURN", "ROOT", "RPAREN", "RSLIST", "RSQUARE", "SCOPE", "SCOPEOF", "SChar", "SELF", "SEMI", "SHIFTLEFT", "SHIFTLEFTEQ", "SHIFTRIGHT", "SHIFTRIGHTEQ", "SHORT", "SIGNED", "SIZEOF", "SPAWN", "STAR", "STAREQ", "STATIC", "STATICASSERT", "STRING_LITERAL", "STRUCT", "SUB", "SUBEQ", "SWITCH", "THREADLOCAL", "TILDE", "TRUE", "TYPEDEF", "UNIFORM", "UNION", "UNSIGNED", "UniversalCharacterName", "UnsignedSuffix", "VOID", "VOLATILE", "WHEN", "WHILE", "WS", "Zero", "BARRIER", "COLLAPSE", "COPYIN", "CRITICAL", "DYNAMIC", "FLUSH", "FST_PRIVATE", "GUIDED", "LST_PRIVATE", "MASTER", "NONE", "NOWAIT", "NUM_THREADS", "OMP", "ORDERED", "PARALLEL", "PRIVATE", "REDUCTION", "RUNTIME", "SCHEDULE", "SECTION", "SECTIONS", "SHARED", "THD_PRIVATE", "Tokens", "COPYPRIVATE", "ASSERT", "EXPR", "PROC", "WAIT"
    };

    public static final int EOF=-1;
    public static final int ABSTRACT=4;
    public static final int ALIGNAS=5;
    public static final int ALIGNOF=6;
    public static final int AMPERSAND=7;
    public static final int AND=8;
    public static final int ARROW=9;
    public static final int ASSIGN=10;
    public static final int ASSUME=11;
    public static final int AT=12;
    public static final int ATOMIC=13;
    public static final int AUTO=14;
    public static final int BIG_O=15;
    public static final int BITANDEQ=16;
    public static final int BITOR=17;
    public static final int BITOREQ=18;
    public static final int BITXOR=19;
    public static final int BITXOREQ=20;
    public static final int BOOL=21;
    public static final int BREAK=22;
    public static final int BinaryExponentPart=23;
    public static final int CASE=24;
    public static final int CChar=25;
    public static final int CHAR=26;
    public static final int CHARACTER_CONSTANT=27;
    public static final int CHOOSE=28;
    public static final int CIVLATOM=29;
    public static final int CIVLATOMIC=30;
    public static final int COLLECTIVE=31;
    public static final int COLON=32;
    public static final int COMMA=33;
    public static final int COMMENT=34;
    public static final int COMPLEX=35;
    public static final int CONST=36;
    public static final int CONTIN=37;
    public static final int CONTINUE=38;
    public static final int DEFAULT=39;
    public static final int DEFINED=40;
    public static final int DERIV=41;
    public static final int DIV=42;
    public static final int DIVEQ=43;
    public static final int DO=44;
    public static final int DOT=45;
    public static final int DOTDOT=46;
    public static final int DOUBLE=47;
    public static final int DecimalConstant=48;
    public static final int DecimalFloatingConstant=49;
    public static final int Digit=50;
    public static final int ELLIPSIS=51;
    public static final int ELSE=52;
    public static final int ENSURES=53;
    public static final int ENUM=54;
    public static final int EQUALS=55;
    public static final int EXISTS=56;
    public static final int EXTERN=57;
    public static final int EscapeSequence=58;
    public static final int ExponentPart=59;
    public static final int FALSE=60;
    public static final int FLOAT=61;
    public static final int FLOATING_CONSTANT=62;
    public static final int FOR=63;
    public static final int FORALL=64;
    public static final int FloatingSuffix=65;
    public static final int FractionalConstant=66;
    public static final int GENERIC=67;
    public static final int GOTO=68;
    public static final int GT=69;
    public static final int GTE=70;
    public static final int HASH=71;
    public static final int HASHHASH=72;
    public static final int HEADER_NAME=73;
    public static final int HERE=74;
    public static final int HexEscape=75;
    public static final int HexFractionalConstant=76;
    public static final int HexPrefix=77;
    public static final int HexQuad=78;
    public static final int HexadecimalConstant=79;
    public static final int HexadecimalDigit=80;
    public static final int HexadecimalFloatingConstant=81;
    public static final int IDENTIFIER=82;
    public static final int IF=83;
    public static final int IMAGINARY=84;
    public static final int IMPLIES=85;
    public static final int INLINE=86;
    public static final int INPUT=87;
    public static final int INT=88;
    public static final int INTEGER_CONSTANT=89;
    public static final int INVARIANT=90;
    public static final int IdentifierNonDigit=91;
    public static final int IntegerSuffix=92;
    public static final int LCURLY=93;
    public static final int LONG=94;
    public static final int LPAREN=95;
    public static final int LSLIST=96;
    public static final int LSQUARE=97;
    public static final int LT=98;
    public static final int LTE=99;
    public static final int LongLongSuffix=100;
    public static final int LongSuffix=101;
    public static final int MINUSMINUS=102;
    public static final int MOD=103;
    public static final int MODEQ=104;
    public static final int NEQ=105;
    public static final int NEWLINE=106;
    public static final int NORETURN=107;
    public static final int NOT=108;
    public static final int NewLine=109;
    public static final int NonDigit=110;
    public static final int NonZeroDigit=111;
    public static final int NotLineStart=112;
    public static final int OR=113;
    public static final int OTHER=114;
    public static final int OUTPUT=115;
    public static final int OctalConstant=116;
    public static final int OctalDigit=117;
    public static final int OctalEscape=118;
    public static final int PDEFINE=119;
    public static final int PELIF=120;
    public static final int PELSE=121;
    public static final int PENDIF=122;
    public static final int PERROR=123;
    public static final int PIF=124;
    public static final int PIFDEF=125;
    public static final int PIFNDEF=126;
    public static final int PINCLUDE=127;
    public static final int PLINE=128;
    public static final int PLUS=129;
    public static final int PLUSEQ=130;
    public static final int PLUSPLUS=131;
    public static final int PP_NUMBER=132;
    public static final int PRAGMA=133;
    public static final int PUNDEF=134;
    public static final int QMARK=135;
    public static final int RCURLY=136;
    public static final int REAL=137;
    public static final int REGISTER=138;
    public static final int REQUIRES=139;
    public static final int RESTRICT=140;
    public static final int RESULT=141;
    public static final int RETURN=142;
    public static final int ROOT=143;
    public static final int RPAREN=144;
    public static final int RSLIST=145;
    public static final int RSQUARE=146;
    public static final int SCOPE=147;
    public static final int SCOPEOF=148;
    public static final int SChar=149;
    public static final int SELF=150;
    public static final int SEMI=151;
    public static final int SHIFTLEFT=152;
    public static final int SHIFTLEFTEQ=153;
    public static final int SHIFTRIGHT=154;
    public static final int SHIFTRIGHTEQ=155;
    public static final int SHORT=156;
    public static final int SIGNED=157;
    public static final int SIZEOF=158;
    public static final int SPAWN=159;
    public static final int STAR=160;
    public static final int STAREQ=161;
    public static final int STATIC=162;
    public static final int STATICASSERT=163;
    public static final int STRING_LITERAL=164;
    public static final int STRUCT=165;
    public static final int SUB=166;
    public static final int SUBEQ=167;
    public static final int SWITCH=168;
    public static final int THREADLOCAL=169;
    public static final int TILDE=170;
    public static final int TRUE=171;
    public static final int TYPEDEF=172;
    public static final int UNIFORM=173;
    public static final int UNION=174;
    public static final int UNSIGNED=175;
    public static final int UniversalCharacterName=176;
    public static final int UnsignedSuffix=177;
    public static final int VOID=178;
    public static final int VOLATILE=179;
    public static final int WHEN=180;
    public static final int WHILE=181;
    public static final int WS=182;
    public static final int Zero=183;
    public static final int BARRIER=195;
    public static final int COLLAPSE=212;
    public static final int COPYIN=221;
    public static final int CRITICAL=222;
    public static final int DYNAMIC=232;
    public static final int FLUSH=248;
    public static final int FST_PRIVATE=251;
    public static final int GUIDED=258;
    public static final int LST_PRIVATE=286;
    public static final int MASTER=291;
    public static final int NONE=297;
    public static final int NOWAIT=300;
    public static final int NUM_THREADS=301;
    public static final int OMP=306;
    public static final int ORDERED=308;
    public static final int PARALLEL=314;
    public static final int PRIVATE=330;
    public static final int REDUCTION=335;
    public static final int RUNTIME=345;
    public static final int SCHEDULE=346;
    public static final int SECTION=350;
    public static final int SECTIONS=351;
    public static final int SHARED=354;
    public static final int THD_PRIVATE=372;
    public static final int Tokens=377;
    public static final int COPYPRIVATE=413;
    public static final int ASSERT=414;
    public static final int EXPR=415;
    public static final int PROC=416;
    public static final int WAIT=417;

    // delegates
    public Parser[] getDelegates() {
        return new Parser[] {};
    }

    // delegators


    public PreprocessorExpressionParser(TokenStream input) {
        this(input, new RecognizerSharedState());
    }
    public PreprocessorExpressionParser(TokenStream input, RecognizerSharedState state) {
        super(input, state);
    }

protected TreeAdaptor adaptor = new CommonTreeAdaptor();

public void setTreeAdaptor(TreeAdaptor adaptor) {
    this.adaptor = adaptor;
}
public TreeAdaptor getTreeAdaptor() {
    return adaptor;
}
    public String[] getTokenNames() { return PreprocessorExpressionParser.tokenNames; }
    public String getGrammarFileName() { return "PreprocessorExpressionParser.g"; }


    public static class start_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "start"
    // PreprocessorExpressionParser.g:24:1: start : expr EOF -> expr ;
    public final PreprocessorExpressionParser.start_return start() throws RecognitionException {
        PreprocessorExpressionParser.start_return retval = new PreprocessorExpressionParser.start_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token EOF2=null;
        PreprocessorExpressionParser.expr_return expr1 =null;


        Object EOF2_tree=null;
        RewriteRuleTokenStream stream_EOF=new RewriteRuleTokenStream(adaptor,"token EOF");
        RewriteRuleSubtreeStream stream_expr=new RewriteRuleSubtreeStream(adaptor,"rule expr");
        try {
            // PreprocessorExpressionParser.g:24:8: ( expr EOF -> expr )
            // PreprocessorExpressionParser.g:24:10: expr EOF
            {
            pushFollow(FOLLOW_expr_in_start56);
            expr1=expr();

            state._fsp--;

            stream_expr.add(expr1.getTree());

            EOF2=(Token)match(input,EOF,FOLLOW_EOF_in_start58);  
            stream_EOF.add(EOF2);


            // AST REWRITE
            // elements: expr
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 24:19: -> expr
            {
                adaptor.addChild(root_0, stream_expr.nextTree());

            }


            retval.tree = root_0;

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "start"


    public static class expr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "expr"
    // PreprocessorExpressionParser.g:27:1: expr : logical_or_expr ;
    public final PreprocessorExpressionParser.expr_return expr() throws RecognitionException {
        PreprocessorExpressionParser.expr_return retval = new PreprocessorExpressionParser.expr_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        PreprocessorExpressionParser.logical_or_expr_return logical_or_expr3 =null;



        try {
            // PreprocessorExpressionParser.g:27:8: ( logical_or_expr )
            // PreprocessorExpressionParser.g:27:10: logical_or_expr
            {
            root_0 = (Object)adaptor.nil();


            pushFollow(FOLLOW_logical_or_expr_in_expr75);
            logical_or_expr3=logical_or_expr();

            state._fsp--;

            adaptor.addChild(root_0, logical_or_expr3.getTree());

            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "expr"


    public static class logical_or_expr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "logical_or_expr"
    // PreprocessorExpressionParser.g:36:1: logical_or_expr : ( logical_and_expr -> logical_and_expr ) ( OR arg= logical_and_expr -> ^( OR $logical_or_expr $arg) )* ;
    public final PreprocessorExpressionParser.logical_or_expr_return logical_or_expr() throws RecognitionException {
        PreprocessorExpressionParser.logical_or_expr_return retval = new PreprocessorExpressionParser.logical_or_expr_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token OR5=null;
        PreprocessorExpressionParser.logical_and_expr_return arg =null;

        PreprocessorExpressionParser.logical_and_expr_return logical_and_expr4 =null;


        Object OR5_tree=null;
        RewriteRuleTokenStream stream_OR=new RewriteRuleTokenStream(adaptor,"token OR");
        RewriteRuleSubtreeStream stream_logical_and_expr=new RewriteRuleSubtreeStream(adaptor,"rule logical_and_expr");
        try {
            // PreprocessorExpressionParser.g:36:17: ( ( logical_and_expr -> logical_and_expr ) ( OR arg= logical_and_expr -> ^( OR $logical_or_expr $arg) )* )
            // PreprocessorExpressionParser.g:36:19: ( logical_and_expr -> logical_and_expr ) ( OR arg= logical_and_expr -> ^( OR $logical_or_expr $arg) )*
            {
            // PreprocessorExpressionParser.g:36:19: ( logical_and_expr -> logical_and_expr )
            // PreprocessorExpressionParser.g:36:20: logical_and_expr
            {
            pushFollow(FOLLOW_logical_and_expr_in_logical_or_expr89);
            logical_and_expr4=logical_and_expr();

            state._fsp--;

            stream_logical_and_expr.add(logical_and_expr4.getTree());

            // AST REWRITE
            // elements: logical_and_expr
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 36:37: -> logical_and_expr
            {
                adaptor.addChild(root_0, stream_logical_and_expr.nextTree());

            }


            retval.tree = root_0;

            }


            // PreprocessorExpressionParser.g:37:4: ( OR arg= logical_and_expr -> ^( OR $logical_or_expr $arg) )*
            loop1:
            do {
                int alt1=2;
                int LA1_0 = input.LA(1);

                if ( (LA1_0==OR) ) {
                    alt1=1;
                }


                switch (alt1) {
            	case 1 :
            	    // PreprocessorExpressionParser.g:37:5: OR arg= logical_and_expr
            	    {
            	    OR5=(Token)match(input,OR,FOLLOW_OR_in_logical_or_expr100);  
            	    stream_OR.add(OR5);


            	    pushFollow(FOLLOW_logical_and_expr_in_logical_or_expr104);
            	    arg=logical_and_expr();

            	    state._fsp--;

            	    stream_logical_and_expr.add(arg.getTree());

            	    // AST REWRITE
            	    // elements: logical_or_expr, arg, OR
            	    // token labels: 
            	    // rule labels: arg, retval
            	    // token list labels: 
            	    // rule list labels: 
            	    // wildcard labels: 
            	    retval.tree = root_0;
            	    RewriteRuleSubtreeStream stream_arg=new RewriteRuleSubtreeStream(adaptor,"rule arg",arg!=null?arg.tree:null);
            	    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            	    root_0 = (Object)adaptor.nil();
            	    // 37:29: -> ^( OR $logical_or_expr $arg)
            	    {
            	        // PreprocessorExpressionParser.g:37:32: ^( OR $logical_or_expr $arg)
            	        {
            	        Object root_1 = (Object)adaptor.nil();
            	        root_1 = (Object)adaptor.becomeRoot(
            	        stream_OR.nextNode()
            	        , root_1);

            	        adaptor.addChild(root_1, stream_retval.nextTree());

            	        adaptor.addChild(root_1, stream_arg.nextTree());

            	        adaptor.addChild(root_0, root_1);
            	        }

            	    }


            	    retval.tree = root_0;

            	    }
            	    break;

            	default :
            	    break loop1;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "logical_or_expr"


    public static class logical_and_expr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "logical_and_expr"
    // PreprocessorExpressionParser.g:46:1: logical_and_expr : ( equality_expr -> equality_expr ) ( AND arg= equality_expr -> ^( AND $logical_and_expr $arg) )* ;
    public final PreprocessorExpressionParser.logical_and_expr_return logical_and_expr() throws RecognitionException {
        PreprocessorExpressionParser.logical_and_expr_return retval = new PreprocessorExpressionParser.logical_and_expr_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        Token AND7=null;
        PreprocessorExpressionParser.equality_expr_return arg =null;

        PreprocessorExpressionParser.equality_expr_return equality_expr6 =null;


        Object AND7_tree=null;
        RewriteRuleTokenStream stream_AND=new RewriteRuleTokenStream(adaptor,"token AND");
        RewriteRuleSubtreeStream stream_equality_expr=new RewriteRuleSubtreeStream(adaptor,"rule equality_expr");
        try {
            // PreprocessorExpressionParser.g:46:17: ( ( equality_expr -> equality_expr ) ( AND arg= equality_expr -> ^( AND $logical_and_expr $arg) )* )
            // PreprocessorExpressionParser.g:46:19: ( equality_expr -> equality_expr ) ( AND arg= equality_expr -> ^( AND $logical_and_expr $arg) )*
            {
            // PreprocessorExpressionParser.g:46:19: ( equality_expr -> equality_expr )
            // PreprocessorExpressionParser.g:46:20: equality_expr
            {
            pushFollow(FOLLOW_equality_expr_in_logical_and_expr131);
            equality_expr6=equality_expr();

            state._fsp--;

            stream_equality_expr.add(equality_expr6.getTree());

            // AST REWRITE
            // elements: equality_expr
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 46:34: -> equality_expr
            {
                adaptor.addChild(root_0, stream_equality_expr.nextTree());

            }


            retval.tree = root_0;

            }


            // PreprocessorExpressionParser.g:47:4: ( AND arg= equality_expr -> ^( AND $logical_and_expr $arg) )*
            loop2:
            do {
                int alt2=2;
                int LA2_0 = input.LA(1);

                if ( (LA2_0==AND) ) {
                    alt2=1;
                }


                switch (alt2) {
            	case 1 :
            	    // PreprocessorExpressionParser.g:47:5: AND arg= equality_expr
            	    {
            	    AND7=(Token)match(input,AND,FOLLOW_AND_in_logical_and_expr142);  
            	    stream_AND.add(AND7);


            	    pushFollow(FOLLOW_equality_expr_in_logical_and_expr146);
            	    arg=equality_expr();

            	    state._fsp--;

            	    stream_equality_expr.add(arg.getTree());

            	    // AST REWRITE
            	    // elements: logical_and_expr, AND, arg
            	    // token labels: 
            	    // rule labels: arg, retval
            	    // token list labels: 
            	    // rule list labels: 
            	    // wildcard labels: 
            	    retval.tree = root_0;
            	    RewriteRuleSubtreeStream stream_arg=new RewriteRuleSubtreeStream(adaptor,"rule arg",arg!=null?arg.tree:null);
            	    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            	    root_0 = (Object)adaptor.nil();
            	    // 47:27: -> ^( AND $logical_and_expr $arg)
            	    {
            	        // PreprocessorExpressionParser.g:47:30: ^( AND $logical_and_expr $arg)
            	        {
            	        Object root_1 = (Object)adaptor.nil();
            	        root_1 = (Object)adaptor.becomeRoot(
            	        stream_AND.nextNode()
            	        , root_1);

            	        adaptor.addChild(root_1, stream_retval.nextTree());

            	        adaptor.addChild(root_1, stream_arg.nextTree());

            	        adaptor.addChild(root_0, root_1);
            	        }

            	    }


            	    retval.tree = root_0;

            	    }
            	    break;

            	default :
            	    break loop2;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }

        finally {
        	// do for sure before leaving
        }
        return retval;
    }
    // $ANTLR end "logical_and_expr"


    public static class equality_expr_return extends ParserRuleReturnScope {
        Object tree;
        public Object getTree() { return tree; }
    };


    // $ANTLR start "equality_expr"
    // PreprocessorExpressionParser.g:56:1: equality_expr : ( relational_expr -> relational_expr ) (op= equality_operator arg= relational_expr -> ^( $op $equality_expr $arg) )* ;
    public final PreprocessorExpressionParser.equality_expr_return equality_expr() throws RecognitionException {
        PreprocessorExpressionParser.equality_expr_return retval = new PreprocessorExpressionParser.equality_expr_return();
        retval.start = input.LT(1);


        Object root_0 = null;

        PreprocessorExpressionParser.equality_operator_return op =null;

        PreprocessorExpressionParser.relational_expr_return arg =null;

        PreprocessorExpressionParser.relational_expr_return relational_expr8 =null;


        RewriteRuleSubtreeStream stream_relational_expr=new RewriteRuleSubtreeStream(adaptor,"rule relational_expr");
        RewriteRuleSubtreeStream stream_equality_operator=new RewriteRuleSubtreeStream(adaptor,"rule equality_operator");
        try {
            // PreprocessorExpressionParser.g:56:15: ( ( relational_expr -> relational_expr ) (op= equality_operator arg= relational_expr -> ^( $op $equality_expr $arg) )* )
            // PreprocessorExpressionParser.g:56:17: ( relational_expr -> relational_expr ) (op= equality_operator arg= relational_expr -> ^( $op $equality_expr $arg) )*
            {
            // PreprocessorExpressionParser.g:56:17: ( relational_expr -> relational_expr )
            // PreprocessorExpressionParser.g:56:18: relational_expr
            {
            pushFollow(FOLLOW_relational_expr_in_equality_expr174);
            relational_expr8=relational_expr();

            state._fsp--;

            stream_relational_expr.add(relational_expr8.getTree());

            // AST REWRITE
            // elements: relational_expr
            // token labels: 
            // rule labels: retval
            // token list labels: 
            // rule list labels: 
            // wildcard labels: 
            retval.tree = root_0;
            RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);

            root_0 = (Object)adaptor.nil();
            // 56:34: -> relational_expr
            {
                adaptor.addChild(root_0, stream_relational_expr.nextTree());

            }


            retval.tree = root_0;

            }


            // PreprocessorExpressionParser.g:57:4: (op= equality_operator arg= relational_expr -> ^( $op $equality_expr $arg) )*
            loop3:
            do {
                int alt3=2;
                int LA3_0 = input.LA(1);

                if ( (LA3_0==EQUALS||LA3_0==NEQ) ) {
                    alt3=1;
                }


                switch (alt3) {
            	case 1 :
            	    // PreprocessorExpressionParser.g:57:5: op= equality_operator arg= relational_expr
            	    {
            	    pushFollow(FOLLOW_equality_operator_in_equality_expr187);
            	    op=equality_operator();

            	    state._fsp--;

            	    stream_equality_operator.add(op.getTree());

            	    pushFollow(FOLLOW_relational_expr_in_equality_expr191);
            	    arg=relational_expr();

            	    state._fsp--;

            	    stream_relational_expr.add(arg.getTree());

            	    // AST REWRITE
            	    // elements: arg, equality_expr, op
            	    // token labels: 
            	    // rule labels: arg, retval, op
            	    // token list labels: 
            	    // rule list labels: 
            	    // wildcard labels: 
            	    retval.tree = root_0;
            	    RewriteRuleSubtreeStream stream_arg=new RewriteRuleSubtreeStream(adaptor,"rule arg",arg!=null?arg.tree:null);
            	    RewriteRuleSubtreeStream stream_retval=new RewriteRuleSubtreeStream(adaptor,"rule retval",retval!=null?retval.tree:null);
            	    RewriteRuleSubtreeStream stream_op=new RewriteRuleSubtreeStream(adaptor,"rule op",op!=null?op.tree:null);

            	    root_0 = (Object)adaptor.nil();
            	    // 58:7: -> ^( $op $equality_expr $arg)
            	    {
            	        // PreprocessorExpressionParser.g:58:10: ^( $op $equality_expr $arg)
            	        {
            	        Object root_1 = (Object)adaptor.nil();
            	        root_1 = (Object)adaptor.becomeRoot(stream_op.nextNode(), root_1);

            	        adaptor.addChild(root_1, stream_retval.nextTree());

            	        adaptor.addChild(root_1, stream_arg.nextTree());

            	        adaptor.addChild(root_0, root_1);
            	        }

            	    }


            	    retval.tree = root_0;

            	    }
            	    break;

            	default :
            	    break loop3;
                }
            } while (true);


            }

            retval.stop = input.LT(-1);


            retval.tree = (Object)adaptor.rulePostProcessing(root_0);
            adaptor.setTokenBoundaries(retval.tree, retval.start, retval.stop);

        }
        catch (RecognitionException re) {
            reportError(re);
            recover(input,re);
    	retval.tree = (Object)adaptor.errorNode(input, retval.start, input.LT(-1), re);

        }
